UI Improvements, Fixed Filebrowser img load

--- a/ui/src/app/components/save-secret-dialog/save-secret-dialog.component.html
+++ b/ui/src/app/components/save-secret-dialog/save-secret-dialog.component.html
@@ -2,12 +2,13 @@
     <div mat-dialog-title>
         <span>Save Your Secret !</span>
     </div>
-    <div class="help-content">
-        <p>This is your secret <code>{{userSecret}}</code> save it someplace safe!, You'll need it later to log back into your server.</p>
-        <br>
-        <p>To connect from your terminal use <code>ssh -o "SetEnv SECRET={{userSecret}}" root@{{sfEndpoint}} </code></p>
+    <div class="help-content flex-col secret-display-area">
+        <p>This is your SECRET:</p>
+        <code>{{userSecret}}</code>
+        <p> save it someplace safe!, You'll need it later to log back
+            into your server.</p>
     </div>
     <mat-dialog-actions align="end">
         <button class="help-close-button" mat-button mat-dialog-close color="primary">Continue</button>
-      </mat-dialog-actions>
+    </mat-dialog-actions>
 </div>
