--- a/ui/src/app/pages/login/login.component.html
+++ b/ui/src/app/pages/login/login.component.html
@@ -26,7 +26,7 @@
                     <span><u><- Go Back</u></span>
                 </div>
                 <span *ngIf="!LoginWithSecret">
-                    Free root shells for you...
+                    Disposable Root Servers
                 </span>
             </div>
             <div *ngIf="loadingDashBoard" class="login-info">
