--- a/ui/src/app/components/save-secret-dialog/save-secret-dialog.component.html
+++ b/ui/src/app/components/save-secret-dialog/save-secret-dialog.component.html
@@ -5,8 +5,8 @@
     <div class="help-content flex-col secret-display-area">
         <p>This is your SECRET:</p>
         <code>{{userSecret}}</code>
-        <p> save it someplace safe!, You'll need it later to log back
-            into your server.</p>
+        <p> save it someplace safe!</p>
+        <p> You'll need it later to log back into your server.</p>
     </div>
     <mat-dialog-actions align="end">
         <button class="help-close-button" mat-button mat-dialog-close color="primary">Continue</button>
