--- a/ui/src/app/pages/terminal-view/terminal-view.component.html
+++ b/ui/src/app/pages/terminal-view/terminal-view.component.html
@@ -19,6 +19,6 @@
 
 <div *ngIf="terminalWindows.length==0" class="terminals-container">
     <div  class="page-info-text">
-        No Open Terminals, Go Ahead Open A New One!
+        No Open Terminals,<br> Press [+] on the top left corner to open a new one.
     </div>
 </div>
