--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -155,6 +155,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 4px;
+    transition: background-color .2s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .menu-button>div>img {
@@ -206,6 +207,7 @@
     align-items: center;
     border-radius: 4px;
     animation: fadeIn 0.5s;
+    transition: background-color .2s ease;
 }
 
 .terminal-tab-closed {
@@ -260,6 +262,8 @@
     justify-content: center;
     align-items: center;
     font-size: xx-large;
+    line-height: 2rem;
+    text-align: center;
 }
 
 @media only screen and (max-width: 800px) {
