--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -345,12 +345,14 @@
     display: flex;
     flex-direction: column;
     line-height: 1.5 rem;
+    height: 30rem;
+    overflow: auto;
 }
 
 @media only screen and (max-width: 800px) {
     .help-content {
         height: 25rem;
-        overflow: scroll;
+        overflow: auto;
     }
 
     .input-secret>input {
