Adjust help dialog size

--- a/ui/src/app/components/help-dialog/help-dialog.component.html
+++ b/ui/src/app/components/help-dialog/help-dialog.component.html
@@ -2,7 +2,7 @@
   <div mat-dialog-title>
     <span>Welcome To Segfault!</span>
   </div>
-  <div class="help-content">
+  <div class="help-content help-dialog">
     <ul>
       <li>
         <div>
