--- a/ui/src/app/components/save-secret-dialog/save-secret-dialog.component.html
+++ b/ui/src/app/components/save-secret-dialog/save-secret-dialog.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="help-content flex-col secret-display-area">
         <p>This is your SECRET:</p>
-        <p><code>{{userSecret}}</code></p>
+        <p><code class="code-select">{{userSecret}}</code></p>
         <p> save it someplace safe!</p>
         <p> You'll need it later to log back into your server.</p>
     </div>
