--- a/ui/src/app/pages/login/login.component.css
+++ b/ui/src/app/pages/login/login.component.css
@@ -38,8 +38,13 @@
     background-color: var(--active-bg);
 }
 
-.input-secret>img,
+.input-secret>div{
+    height: 2rem;
+}
+
+.input-secret-img,
 .help-menu>img {
+    z-index: 5;
     height: 2rem;
     width: 2rem;
     filter: var(--term-tab-icon);
@@ -51,7 +56,7 @@
     margin-left: 0.8rem;
 }
 
-.input-secret>img:hover,
+.input-secret-img:hover,
 .help-menu>img:hover {
     filter: var(--help-btn-bg);
     transition: all .2s ease;
@@ -128,3 +133,41 @@
     height: 1.2rem !important;
     margin-right: 0.5rem;
 }
+
+.lds-ring {
+    display: flex;
+    flex: column;
+    justify-content: center;
+    align-items: center;
+    width: 2.1rem;
+    height: 2.1rem;
+}
+.lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    margin: 8px;
+    border: 4px solid var(--loading-spinner-color);
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: var(--loading-spinner-color) transparent transparent transparent;
+  }
+  .lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  .lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  .lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
