--- a/ui/src/app/components/help-dialog/help-dialog.component.html
+++ b/ui/src/app/components/help-dialog/help-dialog.component.html
@@ -29,7 +29,7 @@
         <ul class="sub-list">
           <li>
             Use you favourite SSH client and connect to {{SfEndpoint}}, example 
-            <code class="code-select">ssh root@{{SfEndpoint}}</code>
+            <code class="code-select">ssh root&#64;{{SfEndpoint}}</code>
             using the password <b><i>segfault</i></b>
           </li>
           <li>
